force-app/main/default/objects/PMC_CPQ_CadenceItem__c/PMC_CPQ_CadenceItem__c.object-meta.xml
<CustomObject>
    <description>Custom object to store weekly availability of products.</description>
    <label>Cadence Item</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Cadence Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cadence Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>