force-app/main/default/objects/PMC_CPQ_CadenceItem__c/fields/PMC_CPQ_Cadence__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Cadence__c</fullName>
    <label>Cadence</label>
    <referenceTo>PMC_CPQ_Cadence__c</referenceTo>
    <relationshipLabel>Cadence Items</relationshipLabel>
    <relationshipName>Cadence_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>