force-app/main/default/objects/PMC_CPQ_CadenceItem__c/fields/PMC_CPQ_ConfirmedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ConfirmedDate__c</fullName>
    <description>Capture the date received from SAP for weekly product data</description>
    <label>Forecasted Date</label>
    <type>Date</type>
</CustomField>