force-app/main/default/objects/PMC_CPQ_CadenceItem__c/fields/PMC_CPQ_ConfirmedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ConfirmedQuantity__c</fullName>
    <description>Capture quantity received from SAP for weekly product data.</description>
    <label>Forecasted Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>